# ctdiff

./: Cargo.toml  README.md
benches/: primitives.rs
examples/basic/: README.md  document_draft_v1.txt  document_draft_v2.txt  file1.txt  file2.txt  timing_test_1.txt  timing_test_2.txt
examples/security/: Makefile  README.md  different_files.txt  early_vs_late_1.txt  early_vs_late_2.txt  hmac_token_secure.c  hmac_token_vulnerable.c  index_lookup_patterns.c  key_lookup_secure.c  key_lookup_vulnerable.c  memory_zeroization.c  parsing_vulnerabilities.c  password_comparison_secure.c  password_comparison_vulnerable.c  password_secure  password_vuln  prefix_matching_secure.c  prefix_matching_vulnerable.c  random_masking_secure.c  random_masking_vulnerable.c  similar_files.txt  statistical_timing_test.c  version_control_new.py  version_control_old.py
examples/tools/: README.md  attack_demo.sh
src/: algorithm.rs  attack.rs  builder.rs  error.rs  lib.rs  main.rs  output.rs  primitives.rs  result.rs  security.rs  timing.rs  types.rs  vulnerable.rs
src/formats/: git.rs  html.rs  json.rs  mod.rs  summary.rs  unified.rs
tests/: algorithm.rs  attack_demo.rs  cli.rs  formats.rs  primitives.proptest-regressions  primitives.rs
