[package]
name = "ctdiff"
version = "0.1.0"
edition = "2021"
authors = ["Tanya Arora"]
description = "constant-time diff algorithm to prevent timing attacks"
license = "GLPv3"
repository = "https://github.com/tanctl/ctdiff"
keywords = ["cryptography", "security", "diff", "constant-time"]
categories = ["cryptography", "algorithms"]

[dependencies]
subtle = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "fs"], optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
tokio-test = "0.4"

[[bench]]
name = "primitives"
harness = false

# library usage examples
[[example]]
name = "basic_usage"
path = "examples/library/basic_usage.rs"

[[example]]
name = "security_demo"
path = "examples/library/security_demo.rs"

[[example]]
name = "performance_comparison"
path = "examples/library/performance_comparison.rs"

[[example]]
name = "integration_examples"
path = "examples/library/integration_examples.rs"

[profile.release]
# ensure optimizations don't break constant-time guarantees
codegen-units = 1
lto = true
panic = "abort"

[profile.bench]
# optimization for benchmarks while preserving timing properties
codegen-units = 1
lto = true

[features]
default = []
async = ["tokio"]